almost done quotaition print will fix spacing prb

--- a/Frontend/Css/quotationPrintPage.css
+++ b/Frontend/Css/quotationPrintPage.css
@@ -13,24 +13,7 @@ h2 {
   font-size: 10pt;
 }
 
-.s1 {
-  color: black;
-  font-family: Verdana, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  text-decoration: none;
-  font-size: 6.5pt;
-  vertical-align: 3pt;
-}
 
-.s2 {
-  color: black;
-  font-family: Verdana, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: none;
-  font-size: 11pt;
-}
 
 h1 {
   color: black;
@@ -60,41 +43,7 @@ p {
   margin: 0pt;
 }
 
-.s4 {
-  color: black;
-  font-family: Verdana, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  text-decoration: none;
-  font-size: 10pt;
-}
 
-.s5 {
-  color: black;
-  font-family: Verdana, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: none;
-  font-size: 10pt;
-}
-
-.s6 {
-  color: #212121;
-  font-family: Verdana, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: none;
-  font-size: 10pt;
-}
-
-.s7 {
-  color: black;
-  font-family: Calibri, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: none;
-  font-size: 10pt;
-}
 
 li {
   display: block;
@@ -114,61 +63,49 @@ li {
   font-size: 10pt;
 }
 
-table,
-tbody {
-  vertical-align: top;
-  overflow: visible;
+
+
+
+
+
+
+.navContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* margin: 0 ; */
+  padding: 0;
+  margin-bottom: 50px;
+
+   
+
 }
-.td1 {
-  width: 149pt;
-  border-top-style: solid;
-  border-top-width: 1pt;
-  border-left-style: solid;
-  border-left-width: 1pt;
-  border-bottom-style: solid;
-  border-bottom-width: 1pt;
-  border-right-style: solid;
-  border-right-width: 1pt;
-}
-.td2 {
-  width: 342pt;
-  border-top-style: solid;
-  border-top-width: 1pt;
-  border-left-style: solid;
-  border-left-width: 1pt;
-  border-bottom-style: solid;
-  border-bottom-width: 1pt;
-  border-right-style: solid;
-  border-right-width: 1pt;
-}
-.gap {
-  text-indent: 0pt;
-  text-align: left;
-}
-.headings {
-  padding-left: 5pt;
-  text-indent: 0pt;
-  text-align: left;
+.navItemsContainer {
+  display: flex;
+  flex-direction: column;
+  
+   border-left: 2px solid rgb(49, 81, 161);
 }
 
 .container1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid black;
+  margin: 0;
+  padding: 0;
+  border: 1px solid;
 }
-
-.spacer {
-  flex: 1;
-}
-
 .container2 {
   font-family: Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   margin-top: 100px;
 }
-
+.container3 {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+}
 .startText {
   display: inline-block;
   width: 40px;
